--- a/app/src/at-uyennguyen/res/layout/fragment_login.xml
+++ b/app/src/at-uyennguyen/res/layout/fragment_login.xml
@@ -7,8 +7,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/head"
             android:layout_width="match_parent"
@@ -17,8 +16,6 @@
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"/>
-
-
         <ImageView
             android:id="@+id/logo"
             android:layout_width="17.8dp"
@@ -28,13 +25,12 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="56dp"
             android:layout_marginLeft="24dp"/>
-
         <TextView
             android:id="@+id/textLogo"
             android:layout_width="70dp"
             android:layout_height="27dp"
             android:fontFamily="Nunito-Bold"
-            android:text="scratch"
+            android:text="@string/scratch"
             android:textColor="#363837"
             android:textSize="20sp"
             app:layout_constraintTop_toTopOf="@id/logo"
@@ -46,7 +42,7 @@
             android:id="@+id/welcome"
             android:layout_width="304.14dp"
             android:layout_height="32dp"
-            android:text="Welcome Back!"
+            android:text="@string/welcome_back"
             android:textSize="24sp"
             android:fontFamily="Nunito-Bold"
             app:layout_constraintStart_toStartOf="@id/logo"
@@ -54,30 +50,27 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginTop="72dp"
             android:textColor="#030F09" />
-
         <TextView
             android:id="@+id/please"
             android:layout_width="200dp"
             android:layout_height="22dp"
             android:layout_marginTop="20dp"
             android:fontFamily="Nunito-Regular"
-            android:text="Please login to continue."
+            android:text="@string/please_login_to_continue"
             android:textColor="#606060"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@id/welcome"
             app:layout_constraintTop_toBottomOf="@id/head" />
-
         <TextView
             android:id="@+id/textEmail"
             android:layout_width="92dp"
             android:layout_height="19dp"
-            android:text="Email address"
+            android:text="@string/email_address"
             android:fontFamily="Nunito-Regular"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/please"
             app:layout_constraintLeft_toLeftOf="@id/please"
             android:layout_marginTop="36dp" />
-
         <EditText
             android:id="@+id/editEmail"
             android:layout_width="0dp"
@@ -88,13 +81,16 @@
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textEmail"
-            app:layout_constraintTop_toBottomOf="@id/textEmail" />
-
+            app:layout_constraintTop_toBottomOf="@id/textEmail"
+            android:hint="@string/your_email_in_login"
+            android:textColorHint="#ACA8A8"
+            android:inputType="textEmailAddress"
+            tools:ignore="Autofill"/>
         <TextView
             android:id="@+id/textPass"
             android:layout_width="65dp"
             android:layout_height="19dp"
-            android:text="Password"
+            android:text="@string/password"
             android:fontFamily="Nunito-Regular"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/editEmail"
@@ -104,13 +100,12 @@
             android:id="@+id/forgot"
             android:layout_width="120dp"
             android:layout_height="19dp"
-            android:text="Forgot password?"
+            android:text="@string/forgot_password"
             android:fontFamily="Nunito-Regular"
             android:textSize="14sp"
             app:layout_constraintTop_toTopOf="@id/textPass"
             app:layout_constraintStart_toEndOf="@id/textPass"
             android:layout_marginLeft="140dp"/>
-
         <EditText
             android:id="@+id/editPass"
             android:layout_width="0dp"
@@ -122,9 +117,10 @@
             app:layout_constraintTop_toBottomOf="@id/textPass"
             app:layout_constraintStart_toStartOf="@id/textPass"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginRight="25dp" />
-
-
+            android:layout_marginRight="25dp"
+            android:hint="@string/your_password_in_login"
+            android:textColorHint="#ACA8A8"
+            tools:ignore="Autofill"/>
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="289.53dp"
@@ -133,31 +129,29 @@
             android:background="@drawable/button"
             android:fontFamily="Nunito-Bold"
             android:gravity="center"
-            android:text="Login"
+            android:text="@string/login"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="@id/editPass"
             app:layout_constraintRight_toRightOf="@+id/editPass"
             app:layout_constraintTop_toBottomOf="@id/editPass" />
-
         <TextView
             android:id="@+id/scratch"
             android:layout_width="173.34dp"
             android:layout_height="22dp"
-            android:text="New to Scratch?"
+            android:text="@string/new_to_scratch"
             android:textSize="14sp"
             android:fontFamily="Nunito-Regular"
             android:textColor="#A8A8A8"
             app:layout_constraintTop_toBottomOf="@+id/btnLogin"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="28dp"
-            />
+            android:layout_marginTop="28dp" />
         <TextView
             android:id="@+id/create"
             android:layout_width="167dp"
             android:layout_height="18dp"
-            android:text="Create Account Here"
+            android:text="@string/create_account_here"
             android:textSize="16sp"
             android:fontFamily="Nunito-Bold"
             android:textColor="#30BE76"
