--- a/app/src/at-nguyenha/res/layout/fragment_register.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_register.xml
@@ -82,7 +82,9 @@
             android:hint="@string/edittext_hint_fullname"
             app:layout_constraintTop_toBottomOf="@+id/tvFullname"
             app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"/>
+            app:layout_constraintStart_toStartOf="@id/g2"
+            tools:ignore="Autofill"
+            android:inputType="text"/>
 
         <TextView
             android:id="@+id/tvEmail"
@@ -101,7 +103,9 @@
             android:hint="@string/edittext_hint_user_email"
             app:layout_constraintTop_toBottomOf="@+id/tvEmail"
             app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"/>
+            app:layout_constraintStart_toStartOf="@id/g2"
+            tools:ignore="Autofill"
+            android:inputType="text"/>
 
         <TextView
             android:id="@+id/tvPassword"
@@ -121,7 +125,9 @@
             android:hint="@string/edittext_hint_password"
             app:layout_constraintTop_toBottomOf="@+id/tvPassword"
             app:layout_constraintEnd_toEndOf="@id/g3"
-            app:layout_constraintStart_toStartOf="@id/g2"/>
+            app:layout_constraintStart_toStartOf="@id/g2"
+            tools:ignore="Autofill"
+            android:inputType="textPassword"/>
 
         <Button
             android:textColor="#FFFFFF"
