--- a/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
+++ b/app/src/at-cuongle/res/layout/fragment_edit_profile.xml
@@ -112,7 +112,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />
 
         <TextView
-            android:id="@+id/imgBtnBack"
+            android:id="@+id/tvBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
@@ -199,7 +199,7 @@
             android:textSize="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
-            app:layout_constraintTop_toBottomOf="@+id/imgBtnBack" />
+            app:layout_constraintTop_toBottomOf="@+id/tvBack" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guidelineLeft"
