--- a/app/src/at-hauha/res/layout/fragment_registry.xml
+++ b/app/src/at-hauha/res/layout/fragment_registry.xml
@@ -66,7 +66,7 @@
         <EditText
             android:inputType="text"
             android:hint="@string/edit_hint_your_name"
-            android:id="@+id/editFullName"
+            android:id="@+id/edtFullName"
             android:layout_width="@dimen/width_324"
             android:layout_height="@dimen/height_64"
             android:text="@string/edittext_fullname"
@@ -84,7 +84,7 @@
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_email_address"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editFullName" />
+            app:layout_constraintTop_toBottomOf="@+id/edtFullName" />
 
         <EditText
             android:inputType="textEmailAddress"
