--- a/app/src/at-daiho/res/layout/fragment_login.xml
+++ b/app/src/at-daiho/res/layout/fragment_login.xml
@@ -143,6 +143,7 @@
             app:layout_constraintTop_toBottomOf="@id/btLogin" />
 
         <TextView
+            android:id="@+id/btSignUp"
             android:layout_width="174dp"
             android:layout_height="18dp"
             android:layout_marginTop="5dp"
