--- a/app/src/at-daiho/res/layout/fragment_sign_up.xml
+++ b/app/src/at-daiho/res/layout/fragment_sign_up.xml
@@ -131,7 +131,7 @@
             tools:ignore="Autofill,LabelFor" />
 
         <TextView
-            android:id="@+id/btCreateAccount"
+            android:id="@+id/btSubmit"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="@dimen/activityControlMargin"
@@ -159,9 +159,10 @@
             android:textSize="@dimen/textSize14"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btCreateAccount" />
+            app:layout_constraintTop_toBottomOf="@id/btSubmit" />
 
         <TextView
+            android:id="@+id/btLogin"
             android:layout_width="174dp"
             android:layout_height="18dp"
             android:layout_marginTop="5dp"
