--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -13,18 +13,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_edit_black_24dp"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
             app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
         <TextView
             android:id="@+id/tvDot"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textview_dot"
+            android:text="@string/textview_text_text_dot"
             android:textSize="30dp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/tvLikes"
-            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
+            app:layout_constraintRight_toLeftOf="@+id/tvLikes"
+            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"
             app:layout_constraintTop_toBottomOf="@+id/tvBio" />
 
         <TextView
@@ -33,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="20dp"
-            android:text="@string/textview_23k_likes"
-            app:layout_constraintStart_toEndOf="@+id/tvFollowers"
+            android:text="@string/textview_text_23k_likes"
+            app:layout_constraintLeft_toRightOf="@+id/tvFollowers"
             app:layout_constraintTop_toBottomOf="@+id/tvBio" />
 
         <TextView
@@ -42,16 +42,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/textview_584_followers"
-            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
+            android:text="@string/textview_text_584_followers"
+            app:layout_constraintLeft_toRightOf="@+id/guidelineCenter"
             app:layout_constraintTop_toBottomOf="@+id/tvBio" />
 
         <TextView
             android:id="@+id/tvSetting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/textview_settings"
-            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+            android:text="@string/textview_text_settings"
+            app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
             app:layout_constraintTop_toTopOf="@+id/tvMyKitchen" />
 
         <TextView
@@ -60,10 +60,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:fontFamily="Nunito-Bold"
-            android:text="@string/textview_nick_evans"
+            android:text="@string/textview_text_nick_evans"
             android:textColor="@color/textview_textcolor_black"
             android:textSize="16dp"
-            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineCenter"
             app:layout_constraintTop_toTopOf="@+id/imgAvatar" />
 
         <TextView
@@ -72,19 +72,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
             android:fontFamily="Nunito-Bold"
-            android:text="@string/textview_my_kitchen"
+            android:text="@string/textview_text_my_kitchen"
             android:textColor="@color/textview_textcolor_black"
             android:textSize="24dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvBio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/text_user_bio"
-            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
+            android:text="@string/textview_text_user_bio"
+            app:layout_constraintLeft_toLeftOf="@+id/guidelineCenter"
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -114,8 +113,7 @@
             android:layout_height="100dp"
             android:layout_marginTop="24dp"
             android:src="@drawable/img_avatar"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
+            app:layout_constraintLeft_toLeftOf="@id/guidelineLeft"
             app:layout_constraintTop_toBottomOf="@+id/tvMyKitchen" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
