--- a/app/src/at-cuongle/res/values/styles.xml
+++ b/app/src/at-cuongle/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">24sp</item>
+    </style>
 </resources>
