--- a/app/src/at-cuongle/res/layout/activity_layout_main.xml
+++ b/app/src/at-cuongle/res/layout/activity_layout_main.xml
@@ -3,6 +3,4 @@
     android:id="@+id/flContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-</FrameLayout>
+    tools:context=".MainActivity" />
