--- a/app/src/at-nguyenha/res/layout/fragment_login.xml
+++ b/app/src/at-nguyenha/res/layout/fragment_login.xml
@@ -90,7 +90,7 @@
             app:layout_constraintEnd_toEndOf="@id/g3"
             app:layout_constraintStart_toStartOf="@id/g2"
             tools:ignore="Autofill"
-            android:inputType="text"/>
+            android:inputType="textEmailAddress"/>
 
         <TextView
             android:id="@+id/tvPassword"
