--- a/app/src/at-cuongle/res/layout/list_item_grid_food.xml
+++ b/app/src/at-cuongle/res/layout/list_item_grid_food.xml
@@ -6,8 +6,8 @@
 
     <ImageView
         android:id="@+id/imgFood"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/img_width_150dp"
+        android:layout_height="@dimen/img_height_150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
