--- a/app/src/at-hauha/res/layout/fragment_user_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_user_profile.xml
@@ -11,7 +11,7 @@
         android:layout_height="96dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:src="@drawable/avatar"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.068"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="108dp"
         android:layout_marginTop="36dp"
-        android:background="@drawable/edit"
+        android:background="@drawable/ic_edit"
         android:textColor="@color/color_black"
         android:textSize="@dimen/text_size_14"
         app:layout_constraintStart_toEndOf="@+id/txtUserName"
