--- a/app/src/at-hauha/res/layout/list_food.xml
+++ b/app/src/at-hauha/res/layout/list_food.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list_item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/left_120dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:layout_marginVertical="@dimen/margin_top_12"
         android:layout_marginHorizontal="@dimen/heigth_32"
-        android:src="@drawable/avatar"
+        android:src="@drawable/ic_avatar"
         android:id="@+id/imgFood"
         android:layout_width="@dimen/top_152"
         android:layout_height="@dimen/top_152"
