add recycler view and handle like button

--- a/app/src/at-cuongle/res/values/colors.xml
+++ b/app/src/at-cuongle/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="color_green">#30BE76</color>
     <color name="color_title">#606060</color>
     <color name="color_black">#030F09</color>
+    <color name="red">#FF0000</color>
 </resources>
