--- a/app/src/at-cuongle/res/values/dimens.xml
+++ b/app/src/at-cuongle/res/values/dimens.xml
@@ -20,5 +20,17 @@
     <dimen name="tablayout_height_80dp">80dp</dimen>
     <dimen name="imgAvatar_width_100dp">100dp</dimen>
     <dimen name="imgAvatar_height_100dp">100dp</dimen>
-
+    <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="width_50dp">50dp</dimen>
+    <dimen name="height_50dp">50dp</dimen>
+    <dimen name="margin_top_40dp">40dp</dimen>
+    <dimen name="text_size_16dp">16dp</dimen>
+    <dimen name="width_30dp">30dp</dimen>
+    <dimen name="margin_top_8dp">8dp</dimen>
+    <dimen name="margin_top_4dp">4dp</dimen>
+    <dimen name="guide_end_12dp">12dp</dimen>
+    <dimen name="guide_begin_24dp">24dp</dimen>
+    <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="height_350dp">350dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
 </resources>
