--- a/app/src/at-hauha/res/layout/fragment_login.xml
+++ b/app/src/at-hauha/res/layout/fragment_login.xml
@@ -36,7 +36,7 @@
             android:id="@+id/txtBack"
             android:layout_width="@dimen/width_92"
             android:layout_height="@dimen/height_30"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_68"
             android:src="@drawable/ic_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             android:id="@+id/txtContinue"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/height_24"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="16dp"
             android:text="@string/textview_please_login_to_continue"
             android:textSize="14dp"
