--- a/app/src/at-hauha/res/layout/fragment_profile.xml
+++ b/app/src/at-hauha/res/layout/fragment_profile.xml
@@ -40,7 +40,7 @@
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/height_64"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,7 +78,7 @@
             android:id="@+id/txtFullName"
             android:layout_width="@dimen/margin_top_68"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:text="@string/textview_full_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtEditProfilePicture" />
@@ -101,7 +101,7 @@
             android:id="@+id/txtBio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_bio"
             app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
             android:id="@+id/txtPrivateInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_private_infomation"
             android:textColor="@color/color_black"
@@ -137,7 +137,7 @@
             android:id="@+id/txtEmail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_email"
             app:layout_constraintStart_toStartOf="parent"
@@ -161,7 +161,7 @@
             android:id="@+id/txtPhone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_phone"
             app:layout_constraintStart_toStartOf="parent"
@@ -185,7 +185,7 @@
             android:id="@+id/editSaveProfile"
             android:layout_width="@dimen/width_348"
             android:layout_height="@dimen/height_48"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:background="@drawable/custom_button"
             android:gravity="center"
