--- a/app/src/at-hauha/res/layout/activity_recylerview.xml
+++ b/app/src/at-hauha/res/layout/activity_recylerview.xml
@@ -11,8 +11,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="@dimen/dimen_40"
+        android:layout_height="@dimen/dimen_40"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="220dp"
         android:visibility="invisible"
