--- a/app/src/at-hauha/res/layout/fragment_registry.xml
+++ b/app/src/at-hauha/res/layout/fragment_registry.xml
@@ -37,7 +37,7 @@
             android:id="@+id/txtBack"
             android:layout_width="@dimen/width_92"
             android:layout_height="@dimen/heigth_32"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/top_72"
             android:src="@drawable/ic_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:id="@+id/txtFullName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_fullname"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +80,7 @@
             android:id="@+id/txtBio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_email_address"
             app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
             android:id="@+id/txtPrivateInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_start_40dp"
+            android:layout_marginStart="@dimen/dimen_40"
             android:layout_marginTop="@dimen/margin_top_20"
             android:text="@string/textview_password"
             app:layout_constraintStart_toStartOf="parent"
@@ -160,7 +160,7 @@
             android:text="@string/textview_login_here"
             android:textColor="@color/color_green"
             android:textSize="16sp"
-            android:layout_marginBottom="@dimen/margin_start_40dp"
+            android:layout_marginBottom="@dimen/dimen_40"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
