--- a/app/src/at-hauha/res/layout/row_item.xml
+++ b/app/src/at-hauha/res/layout/row_item.xml
@@ -3,15 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="@dimen/dimen_10"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/imgAvatar"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="4dp"
+        android:layout_width="@dimen/dimen_60"
+        android:layout_height="@dimen/dimen_60"
+        android:layout_marginStart="@dimen/dimen_24"
+        android:layout_marginTop="@dimen/dimen_4"
         android:src="@drawable/ic_avatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +20,7 @@
         android:id="@+id/tvUserName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/dimen_16"
         android:text="@string/edittext_nich_evans"
         android:textColor="@android:color/black"
         android:textSize="@dimen/text_size_16"
@@ -33,8 +33,8 @@
     <ImageView
         android:id="@+id/imgBackGround"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="@dimen/dimen_324"
+        android:layout_marginTop="@dimen/dimen_8"
         android:scaleType="center"
         android:src="@drawable/ic_cherry_almond_frangipane_galette"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,10 +44,10 @@
 
     <ImageView
         android:id="@+id/imgLike"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/dimen_40"
+        android:layout_height="@dimen/dimen_40"
+        android:layout_marginLeft="@dimen/dimen_20"
+        android:layout_marginTop="@dimen/dimen_10"
         android:src="@drawable/ic_like"
         android:stateListAnimator="@null"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,29 +55,29 @@
 
     <ImageView
         android:id="@+id/imgComment"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/dimen_40"
+        android:layout_height="@dimen/dimen_40"
+        android:layout_marginLeft="@dimen/dimen_20"
+        android:layout_marginTop="@dimen/dimen_10"
         android:src="@drawable/ic_comment"
         app:layout_constraintStart_toEndOf="@id/imgLike"
         app:layout_constraintTop_toBottomOf="@id/imgBackGround" />
 
     <ImageView
         android:id="@+id/imgShare"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_width="@dimen/dimen_40"
+        android:layout_height="@dimen/dimen_40"
+        android:layout_marginLeft="@dimen/dimen_20"
+        android:layout_marginTop="@dimen/dimen_10"
         android:src="@drawable/ic_share"
         app:layout_constraintStart_toEndOf="@id/imgComment"
         app:layout_constraintTop_toBottomOf="@id/imgBackGround" />
 
     <TextView
         android:id="@+id/tvStraight"
-        android:layout_width="300dp"
+        android:layout_width="@dimen/dimen_300"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="@dimen/dimen_28"
         android:background="@drawable/straight"
         android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -87,10 +87,10 @@
 
     <ImageView
         android:id="@+id/imgFavorite"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="@dimen/dimen_15"
+        android:layout_height="@dimen/dimen_15"
+        android:layout_marginStart="@dimen/dimen_20"
+        android:layout_marginTop="@dimen/width_8"
         android:gravity="center"
         android:src="@drawable/ic_like_black"
         android:text="@string/textview_12_likes"
@@ -101,8 +101,8 @@
     <TextView
         android:id="@+id/tvLikeNumber"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginEnd="250dp"
+        android:layout_height="@dimen/dimen_30"
+        android:layout_marginEnd="@dimen/dimen_250"
         android:gravity="center"
         android:text="@string/textview_12"
         android:textStyle="bold"
@@ -114,9 +114,9 @@
     <TextView
         android:id="@+id/tvLike"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="300dp"
+        android:layout_height="@dimen/dimen_30"
+        android:layout_marginStart="@dimen/dimen_6"
+        android:layout_marginEnd="@dimen/dimen_300"
         android:gravity="center"
         android:text="@string/textview_likes"
         android:textStyle="bold"
@@ -129,7 +129,7 @@
         android:id="@+id/tvUserName2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="@dimen/dimen_16"
         android:text="@string/edittext_nich_evans"
         android:textColor="@android:color/black"
         android:textStyle="bold"
@@ -140,7 +140,7 @@
 
     <TextView
         android:id="@+id/tvPreview"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="@dimen/dimen_20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textview_comment"
