--- a/app/src/at-hauha/res/values/dimens.xml
+++ b/app/src/at-hauha/res/values/dimens.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin_start_40dp">40dp</dimen>
     <dimen name="margin_top_68">68dp</dimen>
     <dimen name="height_284">284dp</dimen>
     <dimen name="heigth_32">32dp</dimen>
@@ -32,4 +31,19 @@
     <dimen name="top_152">152dp</dimen>
     <dimen name="width_8">8dp</dimen>
     <dimen name="left_120dp">120dp</dimen>
+    <dimen name="dimen_20">20dp</dimen>
+    <dimen name="dimen_60">60dp</dimen>
+    <dimen name="dimen_24">24dp</dimen>
+    <dimen name="dimen_4">4dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
+    <dimen name="dimen_324">324dp</dimen>
+    <dimen name="dimen_8">8dp</dimen>
+    <dimen name="dimen_40">40dp</dimen>
+    <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_300">300dp</dimen>
+    <dimen name="dimen_6">6dp</dimen>
+    <dimen name="dimen_30">30dp</dimen>
+    <dimen name="dimen_250">250dp</dimen>
+    <dimen name="dimen_15">15dp</dimen>
+    <dimen name="dimen_28">28dp</dimen>
 </resources>
