Create funcition pull to refresh

--- a/app/src/at-hauha/res/layout/activity_recylerview.xml
+++ b/app/src/at-hauha/res/layout/activity_recylerview.xml
@@ -4,11 +4,21 @@
     android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/itemRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="0px"
+        android:layout_weight="1">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleViewMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="@dimen/dimen_40"
@@ -19,5 +29,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycleViewMain" />
+        app:layout_constraintTop_toTopOf="@+id/itemRefresh" />
 </androidx.constraintlayout.widget.ConstraintLayout>
